--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "just create for the mannem command",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "vamsi": "npm i"
     },
     "author": "",
     "license": "ISC",
@@ -12,6 +12,7 @@
         "mannem": "./index.js"
     },
     "dependencies": {
-        "commander": "^2.11.0"
+        "commander": "^2.11.0",
+        "meow": "^3.7.0"
     }
 }
